clusters/building-blocks/monitoring/apps/gatus/app/gatus-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: gatus
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gatus
